manejo incidente completo
falta ver como el técnico entra, ve el incidente y lo arregla....