@@ -5,11 +5,14 @@ import org.example.MenuPrincipal;
 import javax.persistence.*;
 import java.util.InputMismatchException;
 import java.util.List;
+import java.util.function.Consumer;
 import java.util.stream.Collectors;
 
 public class GeneralBack {
     private static final EntityManagerFactory entityManagerFactory = Persistence.createEntityManagerFactory("JPA_PU");
-    public static java.util.Scanner leer = new java.util.Scanner(System.in);
+
+
+    // ------------- INGRESO SOFTWARES NUEVO  -----------------------------------------------
 
     public static void cargarSoftware() {
         Software software = armarNuevoSoftware();
@@ -27,19 +30,13 @@ public class GeneralBack {
 
     public static Software armarNuevoSoftware() {
         System.out.println("-----Nuevo Software----");
-        String nombre;
-        do {
-            System.out.print("Nombre: ");
-            nombre = leer.nextLine();
-            if (!nombre.matches("^[a-zA-Z]+( [a-zA-Z]+)*$")) {
-                System.out.println("Nombre incorrecto, vuelva a ingresarlo: ");
-            }
-        } while (!nombre.matches("^[a-zA-Z]+( [a-zA-Z]+)*$"));
         Software software = new Software();
-        software.setNombre(nombre);
+        software.setNombre(controlFormatoNombreOApellido(Scanners.obtenerStringSinFormato("Software")));
         software.setEstado(true);
         return software;
     }
+
+    // ------------- LISTAR SOFTWARES DISPONIBLES  -----------------------------------------------
 
     public static List<Software> listarSoftware() {
         EntityManager entityManager = entityManagerFactory.createEntityManager();
@@ -53,152 +50,127 @@ public class GeneralBack {
         }
         return softwares;
     }
+    // ------------- LISTAR SOFTWARES POR CLIENTE  -----------------------------------------------
 
     public static List<Software> softwareDisponiblesClientesParaContratar(Cliente cliente) {
         List<Software> todosSoftwares = GeneralBack.listarSoftware();
         List<Software> softwareClientes = AreaComercialBack.obtenerServiciosClientes(cliente).stream()
                 .map(ServicioCliente::getSoftware)
-                .collect(Collectors.toList());
-        List<Software> softwaresSinContratar = todosSoftwares.stream()
+                .toList();
+        return todosSoftwares.stream()
                 .filter(software -> !softwareClientes.contains(software))
                 .distinct()
                 .collect(Collectors.toList());
-        return softwaresSinContratar;
     }
 
+    // ------------- LISTAR SOFTWARES QUE UN TECNICO NO TIENE EN SU CARTERA -----------------
 
     public static List<Software> softwareDisponiblesAgregarTecnicos(Tecnico tecnico) {
         List<Software> todosSoftwares = GeneralBack.listarSoftware();
         List<Software> listaDeSoftwaresTecnico = RRHHManagerBack.obtenerServiciosTecnicos(tecnico)
                 .stream()
                 .map(ServicioTecnico::getSoftware)
-                .collect(Collectors.toList());
-        List<Software> softwaresSinExperiencia = todosSoftwares.stream()
+                .toList();
+        return todosSoftwares.stream()
                 .filter(software -> !listaDeSoftwaresTecnico.contains(software))
                 .distinct()
                 .collect(Collectors.toList());
-        return softwaresSinExperiencia;
     }
 
-    public static String obtenerNombreOApellido(String titulo) {
-        System.out.println(titulo + ": ");
-        String nombre = leer.next();
-        if (!nombre.matches("^[a-zA-Z]+$")) {
-            do {
-                System.out.println(titulo + " incorrecto, vuelva a intentarlo: ");
-                nombre = leer.next();
-                leer.nextLine();
-            } while (!nombre.matches("^[a-zA-Z]+$"));
-        }
+    // --------------------------------------------------------------------------------------
+    // ---------------- METODOS CONTROL INGRESO DATOS ---------------------------------------
+
+    public static String controlFormatoNombreOApellido(String tituloLineaIngreso) {
+        String nombre;
+        do {
+            nombre = Scanners.obtenerStringSinFormato(tituloLineaIngreso);
+            System.out.println((validarFormatoNombreApellido(nombre))? "":"Formato incorrecto");
+        } while (!validarFormatoNombreApellido(nombre));
         return nombre;
     }
 
-    public static String obtenerCuit() {
+    public static boolean validarFormatoNombreApellido(String nombre) {
+        return (nombre.matches("^[a-zA-Z]+$"));
+    }
+
+    public static String controlFormatoCUIT(String titutloLineaIngreso) {
         String cuit;
         do {
-            System.out.print("Cuit: ");
-            cuit = leer.next();
-            leer.nextLine();
-        } while (!MetodosControl.validarFormatoCUIT(cuit));
+            cuit = Scanners.obtenerStringSinFormato(titutloLineaIngreso);
+            System.out.println(validarFormatoCUIT(cuit)? "":"Cuit incorrecto, vuelva a ingresarlo en formato (xx-xxxxxxxx-x):");
+        } while (!validarFormatoCUIT(cuit));
         return cuit;
     }
 
-    public static long obtenerCelular() {
-        boolean celularCorrecto = false;
-        long celular = 0;
-        do {
-            try {
-                System.out.print("Celular: ");
-                celular = leer.nextLong();
-                leer.nextLine();
-                celularCorrecto = true;
-            } catch (InputMismatchException error) {
-                System.out.println("Celular Incorrecto,vuelva a ingresarlo: ");
-                leer.nextLine();
-            }
-        } while (!celularCorrecto);
-        return celular;
+    public static boolean validarFormatoCUIT(String cuit) {
+        return (cuit.matches("\\d{2}-\\d{8}-\\d"));
     }
 
-    public static String obtenerEmail() {
+    public static String controlFormatoEmail(String tituloLineaIngreso) {
         String mail;
         do {
-            System.out.print("E-Mail: ");
-            mail = leer.next();
-            leer.nextLine();
-        } while (!MetodosControl.validarEmail(mail));
+            mail = Scanners.obtenerStringSinFormato(tituloLineaIngreso);
+            System.out.println(validarFormatoCUIT(mail)? "":"Formato mail incorrecto");
+        } while (!validarEmail(mail));
         return mail;
     }
 
-    public static int obtenerNumeroInt(String titulo) {
-        boolean numeroCorrecto = false;
-        int numero = 0;
+    public static boolean validarEmail(String email) {
+        return email.contains("@") && email.contains(".com");
+    }
+
+    public static long obtenerCelular(String tituloLineaIngreso) {
+        Long celular;
         do {
-            try {
-                System.out.print("DNI: ");
-                numero = leer.nextInt();
-                leer.nextLine();
-                numeroCorrecto = true;
-            } catch (InputMismatchException error) {
-                System.out.println(titulo + " incorrecto,vuelva a ingresarlo: ");
-                leer.nextLine();
-            }
-        } while (!numeroCorrecto);
-        return numero;
+             celular = Scanners.obtenerNumeroLong("Celular");
+        } while (!validarCelular(celular));
+        return celular;
     }
 
+    public static boolean validarCelular(Long numeroCelular) {
+        return (numeroCelular.toString().length() == 10 && numeroCelular.toString().startsWith("15"));
+    }
 
+    public static int controlLargoDNI(String titulo) {
+        String numeroString;
+        int numeroInt;
+        do {
+            numeroInt = Scanners.obtenerNumeroInt(titulo);
+            ((Consumer<String>) s -> {if (s.length() != 8) {System.out.println("Formato DNI Incorrecto.");}}).accept(String.valueOf(numeroInt));
+        } while (!validarDNI(numeroInt));
+        return numeroInt;
+    }
+    public static boolean validarDNI(int DNI) {
+        return (String.valueOf(DNI).length() == 8);
+    }
 
-    public static boolean cambiarEstadoTecnico() {
-        System.out.println("Nuevo Estado: ");
-        System.out.print("1- Activo");
-        System.out.print("-- 2- Inactivo");
-        System.out.print("-- 3- Salir");
-        int opcion;
+    public static String controlDescripcionIncidente(String tituloLineaIngreso){
+        String descripcion;
         do{
-            opcion = leerOpcionIndices(3);
-        } while(opcion!= 3);
-        return (opcion == 1);
+            descripcion = Scanners.obtenerStringSinFormato(tituloLineaIngreso);
+        }while (descripcion.length()>100);
+        return descripcion;
     }
 
 
-    public static int leerOpcionIndices(int indiceMaximo) {
+    public static int controlOpcionIndices(int indiceMaximo) {
         int indice = 0;
         while (true) {
-            try {
-                System.out.print("Ingrese Opcion (1-" + indiceMaximo + "): ");
-                indice = MetodosControl.leer.nextInt();
-                MetodosControl.leer.nextLine();
-                if (indice >= 1 && indice <= indiceMaximo) {
-                    break;
-                } else {
-                    System.out.println("Indice fuera de rango. Inténtelo de nuevo.");
-                }
-            } catch (InputMismatchException errorFormato) {
-                System.out.println("Opción no válida. Por favor, elija una opción válida.");
-                MetodosControl.leer.nextLine();
+            indice = Scanners.obtenerNumeroInt("Opción");
+            if (indice >= 1 && indice <= indiceMaximo) {
+                break;
+            } else {
+                System.out.println("Indice fuera de rango.");
             }
         }
         return indice;
     }
 
-    public static String obtenerDescripcionIncidente(){
-        String descripcion;
-        do{
-            System.out.println("Descripcion incidente (Maximo 100 caracteres):");
-            descripcion = leer.next();
-            leer.nextLine();
-        }while (descripcion.length()>100);
-        return descripcion;
-    }
 
-    public static String tipoComunicacionReporteIncidente(){
-        System.out.println("Vía comunicacion preferida");
-        System.out.println("1- celular");
-        System.out.println("2- email");
-        int opcion = leerOpcionIndices(2);
-        return ((opcion == 1)? "celular":"email");
-    }
+    // --------------------------------------------------------------------------------------
+    // ---------------- METODOS INGRESO DATOS SCANNER ---------------------------------------
+
+
 
 
 }
